# AlgorithmeTPs

./: CMakeLists.txt  README.md
AlgoTP1/: CMakeLists.txt  Voyage.cpp  arret.cpp  auxilliaires.cpp  coordonnees.cpp  coordonnees.h  ligne.cpp  main.cpp  main_test.cpp  station.cpp  station.h
AlgoTP1/Enonce/: arret.h  auxiliaires.h  ligne.h  voyage.h
AlgoTP1/Enonce/RTC/: __licence.txt  __lisez-moi.txt  calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  transfers.txt  trips.txt
AlgoTP2/: CMakeLists.txt  Voyage.cpp  auxiliaires.h  auxilliaires.cpp  coordonnees.cpp  gestionnaire.cpp  gestionnaire.h  ligne.cpp  ligne.h  main.cpp  reseau.cpp  reseau.h  station.cpp
AlgoTP3/: CMakeLists.txt  Voyage.cpp  station.h  voyage.h
